add navigation menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<mat-toolbar color="primary">
+  <a mat-button routerLink="/">Home</a>
+  <a mat-button routerLink="shopping-list">Shopping list</a>
+  <a mat-button routerLink="shopping-list-edit">Shopping list edit</a>
+</mat-toolbar>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
