--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,7 @@
   max-width: 1400px;
   width: 100%;
   margin: 0 auto;
+  padding: 16px;
   justify-content: center;
   align-items: center;
   flex-direction: column;
