--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,3 +1,23 @@
-<div *ngFor="let product of products | async">
-  {{ product.name }}
-</div>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="store">
+    <th mat-header-cell *matHeaderCellDef> Store </th>
+    <td mat-cell *matCellDef="let element">
+      <a [href]="element.store.url" target="_blank" rel="noopener">
+        {{element.store.name}}
+      </a>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="purchasedAt">
+    <th mat-header-cell *matHeaderCellDef> Purchased at </th>
+    <td mat-cell *matCellDef="let element"> {{element.purchasedAt}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
