--- a/src/app/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list-edit/shopping-list-edit.component.html
@@ -1,1 +1,30 @@
-<p>shopping-list-edit works!</p>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="store">
+    <th mat-header-cell *matHeaderCellDef> Store </th>
+    <td mat-cell *matCellDef="let element">
+      <a [href]="element.store.url" target="_blank" rel="noopener">
+        {{element.store.name}}
+      </a>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="purchasedAt">
+    <th mat-header-cell *matHeaderCellDef> Purchased at </th>
+    <td mat-cell *matCellDef="let element"> {{element.purchasedAt}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="remove">
+    <th mat-header-cell *matHeaderCellDef> </th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-raised-button color="warn" type="button" (click)="removeProduct(element)">remove</button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
