--- a/src/app/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list-edit/shopping-list-edit.component.html
@@ -15,7 +15,14 @@
 
   <ng-container matColumnDef="purchasedAt">
     <th mat-header-cell *matHeaderCellDef> Purchased at </th>
-    <td mat-cell *matCellDef="let element"> {{element.purchasedAt}} </td>
+    <td mat-cell *matCellDef="let element">
+      <!--
+        LLLL is locale based so may differ, but for static
+        Sunday, Feburary 14th 2010, 15:25
+        use dddd, MMMM Do YYYY, hh:mm
+      -->
+      {{element.purchasedAt | amFromUnix | amDateFormat: 'LLLL'}}
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="remove">
