--- a/src/app/shopping-list/shopping-list.component.scss
+++ b/src/app/shopping-list/shopping-list.component.scss
@@ -4,3 +4,21 @@
   flex-direction: column;
   align-items: center;
 }
+
+form {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin-bottom: 32px;
+  padding: 16px;
+  background-color: #fff;
+}
+
+mat-form-field {
+  width: 270px;
+}
+mat-form-field + mat-form-field {
+  margin-left: 8px;
+}
