proper header styles

--- a/src/app/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list-edit/shopping-list-edit.component.html
@@ -1,4 +1,4 @@
-<h2>Product list edit</h2>
+<h1 class="mat-h1">Product list edit</h1>
 
 <form [formGroup]="productToAdd" (ngSubmit)="productSave()" class="mat-elevation-z8">
   <mat-form-field>
