--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
-<h2>Product history</h2>
+<h1 class="mat-h1">Product history</h1>
 
-<form [formGroup]="filters">
+<form [formGroup]="filters" class="mat-elevation-z8">
   <mat-form-field>
     <input
       matInput
